--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+diesel = { version = "2.0.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "postgres"] }
+dirs-next = "2.0.0"
+thiserror = "1.0.38"
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
