--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ dirs-next = "2.0.0"
 thiserror = "1.0.38"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+raster = "0.2.0"
+unicode-segmentation = "1.10.1"
